--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "express-html",
   "version": "0.0.1",
   "dependencies": {
-    "express": "^4.11.0",
-    "mongodb": "~2.0",
-    "body-parser": "~1.13.1"
+    "express": "latest",
+    "mongodb": "latest",
+    "body-parser": "latest",
+    "oauth": "latest",
+    "node-schedule": "latest"
   }
 }
