--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "express": "latest",
     "mongodb": "latest",
     "body-parser": "latest",
-    "oauth": "latest",
-    "node-schedule": "latest"
+    "node-schedule": "latest",
+	  "crypto": "latest"
   }
 }
